--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@ astroid==2.2.5
 atomicwrites==1.3.0
 attrs==19.1.0
 bert-serving-client==1.9.1
+bert-serving-server==1.9.1
 certifi==2019.3.9
 chardet==3.0.4
 Click==7.0
 colorama==0.4.1
+cx-Oracle==7.1.3
 docker==4.0.1
 GPUtil==1.4.0
 idna==2.8
@@ -35,6 +37,6 @@ typed-ast==1.4.0
 urllib3==1.25.3
 wcwidth==0.1.7
 websocket-client==0.56.0
--e git+https://github.com/bradfox2/WordParsing@93525a3c7f806eb364c74a203b2d5f114f04cd38#egg=WordParsing
+-e git+https://github.com/bradfox2/WordParsing@ec5b2cd267481bbca8f19067daaf00330c900c27#egg=WordParsing
 wrapt==1.11.1
 zipp==0.5.1
